bug 382318 crash [@ nsXULTreeAccessibleWrap::GetColumnAtIndex]r=aaronleventhal